[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourproject"
version = "0.0.1"
description = "My package"
authors = [{ name="Michael Yu" }]
readme = "README.md"
requires-python = ">=3.9"
# TODO specify dependencies

[tool.setuptools.packages.find]
where = ["src"]